@@ -1,11 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         NEXT-init
-version:      1.03
+version:      1.04
 version_from: 
 installdirs:  site
 requires:
     NEXT:                          0
+    Scalar::Util:                  0
     strict:                        0
     warnings:                      0
 
